@@ -52,6 +52,7 @@ next version - not released yet
 ! Subfolders were sometimes parsed multiple times when drag-and-dropping a folder
 ! Haali Renderer: Fix XySubFilter support
 ! Cover image were sometimes incorrectly displayed
+! Logitech LCD: MPC-HC crashed when the media duration was unknown
 ! Ticket #2167, Prevent the task bar buttons from being RTLed when Windows is configured to use RTL layout
 ! Ticket #2516, VSFilter: Fix PGS/DVB subtitles with different size than video frame
 ! Ticket #5183, Fix a rare crash when processing after playback event
